[package]
name = "tgchp"
version = "0.0.8"
edition = "2021"
description = "Telegram Chat History Parser."
keywords = ["telegram", "chat-history", "parser"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.7.0"
sonic-rs = "0.3.4"
